# try-openspec-with-claude-china-brain

./: .gitignore  README.md  idea.md
docs/superpowers/plans/: 2026-06-27-rimworld-mvp-plan.md
docs/superpowers/specs/: 2026-06-27-rimworld-mvp-design.md
rimworld-mvp/: Cargo.toml
rimworld-mvp/wasm-core/src/: components.rs  events.rs  lib.rs  map.rs  wasm_entry.rs
rimworld-mvp/wasm-core/src/systems/: auto_need.rs
rimworld-mvp/web-app/: package-lock.json
rimworld-mvp/web-app/src/: App.vue  main.ts
rimworld-mvp/web-app/src/game/: engine.ts  sprites.ts  tilemap.ts
rimworld-mvp/web-app/src/store/: gameStore.ts
rimworld-mvp/web-app/src/ui/: MainPanel.vue  UnitPanel.vue
wasm-core/: Cargo.toml
wasm-core/src/: game_state.rs  lib.rs  map.rs  wasm_entry.rs
wasm-core/src/systems/: idle.rs  mod.rs  movement.rs  needs.rs  player_commands.rs
web-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-app/src/game/: constants.ts  engine.ts  renderer.ts
web-app/src/worker/: game-bridge.ts
